--- a/src/app/suscription/suscription.component.css
+++ b/src/app/suscription/suscription.component.css
@@ -6,7 +6,7 @@
    --input-focus: #348750;
    --bg-color: #E5E2D9;
    --bg-color-alt: #E5E2D9;
-   --main-color: #323232;
+   --main-color: #03071e;
      /* display: flex; */
      /* flex-direction: column; */
      /* align-items: center; */
@@ -182,15 +182,16 @@
    color: var(--font-color);
    padding: 5px 10px;
    outline: none;
+   font-family: 'Typewriter-thin', sans-serif;
 }
 
 .flip-card__input::placeholder {
-   color: var(--font-color-sub);
+   font-family: 'Typewriter-thin', sans-serif;
    opacity: 0.8;
 }
 
 .flip-card__input:focus {
-   border: 2px solid var(--input-focus);
+   border: 2px solid;
 }
 
 .flip-card__btn:active,
